working on getting the clock background to change color

--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
 <head>
 	<title>Clock</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-
+<body id="hexback" class="hexback">
 <div class="container">
-
-<div id="hour" class="hour"></div>
-<div class="colon">:</div>
-<div id="min" class="min"></div>
-<div class="colon">:</div>
-<div id="sec" class="sec"></div>
-
+<div class="clock" id="clock">
+</div>
 </div>
 
 <script src="js/jquery.js"></script>
