Working on styling the clock.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Clock</title>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body id="hexback" class="hexback">
+<body>
 <div class="container">
-	<div class="clock" id="clock">
+	<div class="hulk">
+		<div class="clock" id="clock"></div>
 	</div>
 </div>
 
